AWE/src/objects/Error_Log__c.object
<CustomObject>
    <description>Stores all error details produced from Advance Workflow</description>
    <fields>
        <fullName>ErrorLineNumber__c</fullName>
        <label>ErrorLineNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorSource__c</fullName>
        <label>ErrorSource</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Rule_Name__c</fullName>
        <label>Error Rule Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Code__c</fullName>
        <label>Import Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Execution__c</fullName>
        <label>Log_Execution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Method_Name__c</fullName>
        <label>Object Method Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectId__c</fullName>
        <label>SObjectId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Track_Name__c</fullName>
        <label>Track Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ErrorLineNumber__c</columns>
        <columns>Error_Description__c</columns>
        <columns>ErrorSource__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Object_Method_Name__c</columns>
        <columns>Object_Name__c</columns>
        <columns>SObjectId__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Track_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>ErrorLineNumber__c</columns>
        <columns>Error_Description__c</columns>
        <columns>ErrorSource__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Object_Method_Name__c</columns>
        <columns>Object_Name__c</columns>
        <columns>SObjectId__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Track_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>ErrLog-{000000000}</displayFormat>
        <label>Error Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>